# agentbench-py

./: .env.example  .gitignore  main.py  pyproject.toml  pyrefly.toml
.github/workflows/: test.yml
agentbench/: cli.py  logging.py  run_task.py  suite_runner.py
agentbench/sandbox/: docker_sandbox.py  filesystem.py
agentbench/sandbox/temp_dir_whp/: temp_dir_stdout_path.txt
agentbench/sandbox/tests/: sandbox_test.py
agentbench/schemas/: README.md  attempt_record.py  events.py
agentbench/schemas/tests/: test_attempt_record.py
agentbench/scoring/: README.md  __init__.py  taxonomy.py
agentbench/scoring/tests/: __init__.py  test_taxonomy.py
agentbench/tasks/: exceptions.py  loader.py  models.py  validation.py  validator.py
agentbench/tasks/tests/: test_loader.py  test_validator.py
agentbench/tools/: __init__.py  builtins.py  contract.py  patching.py
agentbench/tools/schemas/: events.py
agentbench/tools/tests/: test_contract.py  test_patching.py
agentbench/util/: attempt.py  git.py  jsonl.py  paths.py  process.py
agentbench/util/tests/: test_attempt.py  test_jsonl.py
docker/py-runner/: Dockerfile  README.md
plan/: spec.txt
plan/weeks/: week-1.md  week-2.md
scripts/: demo_scripted_agent.sh  openrouter_call.py
tasks/custom-dev/toy_fail_pytest/: task.yaml
tasks/custom-dev/toy_pass_pytest/: task.yaml
tasks/custom-dev/toy_setup_fail/: task.yaml
tasks/custom-dev/toy_timeout/: task.yaml
tests/: test_basic.py
