[project]
name = "agentbench-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "PyYAML",
    "ulid-py",
    "path>=17.1.1",
    "pytest>=9.0.2",
]

[project.scripts]
ab = "agentbench.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 80
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "examples/toy_repo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentbench"]
