[project]
name = "agentbench-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "pyyaml",
    "ulid-py",
    "path>=17.1.1",
    "pytest>=9.0.2",
    "ulid>=1.1",
    "ruff>=0.14.9",
    "filelock>=3.20.1",
]

[project.scripts]
agentbench = "agentbench.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "examples/toy_repo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentbench"]
